Double clicking the titlebar to minimize to Dock still doesn't work on 10.13, even after the patch for bug 1577587
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | + | verified |
firefox71 | + | verified |
People
(Reporter: mstange, Assigned: mstange)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
See bug 1577587:
(In reply to fiveNinePlusR from bug 1577587 comment #0)
Double clicking on the titlebar in mac os doesn't minimize firefox to the dock with the "Double click a window's titlebar to minimize the dock" preference enabled.
(In reply to fiveNinePlusR from bug 1577587 comment #13)
on latest nightly and it looks like this patch is included but the issue still remains. can someone else verify this?
Assignee | ||
Comment 1•3 years ago
|
||
Could you try to find a regression range for this, using mozregression?
https://mozilla.github.io/mozregression/install.html#mozregression
https://mozilla.github.io/mozregression/quickstart.html#command-line
Comment 2•3 years ago
|
||
regression-window |
sure:
15:51.32 INFO: Using local file: /var/folders/zv/v3f3_6js4tjc0fr1b_3zjk8w0000gn/T/tmp3s1Mog/2d881c1ee2d0-shippable--autoland--target.dmg (downloaded in background)
15:51.32 INFO: Running autoland build built on 2019-08-26 03:02:15.961000, revision 2d881c1e
16:21.72 INFO: Launching /private/var/folders/zv/v3f3_6js4tjc0fr1b_3zjk8w0000gn/T/tmpj4cru7/Firefox Nightly.app/Contents/MacOS/firefox
16:21.72 INFO: Application command: /private/var/folders/zv/v3f3_6js4tjc0fr1b_3zjk8w0000gn/T/tmpj4cru7/Firefox Nightly.app/Contents/MacOS/firefox --allow-downgrade -foreground -profile /var/folders/zv/v3f3_6js4tjc0fr1b_3zjk8w0000gn/T/tmppTLaOT.mozrunner
16:21.75 INFO: application_buildid: 20190826014703
16:21.75 INFO: application_changeset: 2d881c1ee2d0f3a92767dedd5b311e446cc138b7
16:21.75 INFO: application_name: Firefox
16:21.75 INFO: application_repository: https://hg.mozilla.org/integration/autoland
16:21.75 INFO: application_version: 70.0a1
Was this inbound build good, bad, or broken? (type 'good', 'bad', 'skip', 'retry', 'back' or 'exit' and press Enter): good
17:12.71 INFO: Narrowed inbound regression window from [a1e72b9b, 70ec0ddc] (4 builds) to [2d881c1e, 70ec0ddc] (2 builds) (~1 steps left)
17:12.71 INFO: No more inbound revisions, bisection finished.
17:12.71 INFO: Last good revision: 2d881c1ee2d0f3a92767dedd5b311e446cc138b7
17:12.71 INFO: First bad revision: 70ec0ddc8f325ad57741865e7bd58bb311e9bb20
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 4•3 years ago
|
||
Thanks for getting the regression range! Looks like I'll need to do some debugging on 10.13.
Comment 5•3 years ago
|
||
The priority flag is not set for this bug.
:spohl, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Assignee | ||
Comment 6•3 years ago
|
||
I've set up a 10.13 machine and tested this, and double-click-to-minimize works correctly over here.
Can you please run the following two commands in Terminal on your machine and paste the output here? Thanks!
defaults read -g AppleMiniaturizeOnDoubleClick
defaults read -g AppleActionOnDoubleClick
Assignee | ||
Comment 7•3 years ago
|
||
Erik, could you run the commands from comment 6, too?
Comment 9•3 years ago
|
||
~ ❯❯❯ defaults read -g AppleMiniaturizeOnDoubleClick
1
~ ❯❯❯ defaults read -g AppleActionOnDoubleClick
Minimize
it definitely works in most every other application on my system.
Comment 10•3 years ago
|
||
FWIW, this is happening to me on 10.14.6.
Assignee | ||
Comment 11•3 years ago
|
||
Oh I think I found my mistake. When you say "titlebar", you actually mean the titlebar. And not the tab bar or the toolbar.
I never tested the configuration with the separate titlebar enabled.
Ok, I think I know what to do.
Comment 12•3 years ago
|
||
Yep! :-)
Assignee | ||
Comment 13•3 years ago
|
||
This was already working for toolbars, but it wasn't working for the titlebar in windows that
actually have a real separate titlebar.
All our windows use NSFullSizeContentViewWindowMask, so we no longer get this behavior for free.
In windows with titlebars, the titlebar area is covered with a TitlebarGradientView, so that's
where we need to handle the double clicks.
Comment 14•3 years ago
|
||
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/88ec006f2ab7 Maximize or minimize the window when double clicking the titlebar. r=spohl
Comment 15•3 years ago
|
||
bugherder |
Comment 16•3 years ago
|
||
Verified over here! Thank you! :-D
Assignee | ||
Comment 17•3 years ago
|
||
Comment on attachment 9099669 [details]
Bug 1581433 - Maximize or minimize the window when double clicking the titlebar. r=spohl
Beta/Release Uplift Approval Request
- User impact if declined: Double-clicking the titlebar, on windows with separate titlebars, will not minimize or maximize the window.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The code is straightforward, the surface area for bugs is limited, has been tested on multiple versions of macOS
- String changes made/needed:
Comment on attachment 9099669 [details]
Bug 1581433 - Maximize or minimize the window when double clicking the titlebar. r=spohl
Fix for recent regression in titlebar behavior, OK for beta 14 uplift.
Comment 19•3 years ago
|
||
bugherderuplift |
Updated•3 years ago
|
Updated•3 years ago
|
Comment 20•3 years ago
|
||
Hi, This issue is verified as Fixed in our latest Nightly build as well as Beta 70.0b14 on Mac OSX 10.13.6
Description
•