Bug 1581433 - Maximize or minimize the window when double clicking the titlebar. r=spohl

This was already working for toolbars, but it wasn't working for the titlebar in windows that
actually have a real separate titlebar.
All our windows use NSFullSizeContentViewWindowMask, so we no longer get this behavior for free.
In windows with titlebars, the titlebar area is covered with a TitlebarGradientView, so that's
where we need to handle the double clicks.

Differential Revision: https://phabricator.services.mozilla.com/D48593